# bb-arena

./: .env.example  .gitignore  README.md  arena_analysis.ipynb  check_tables.py  check_updated_games.py  demand_prediction_model.ipynb  populate_level_1_leagues.py  pyproject.toml  run_server.py  test_updated_pricing_service.py
docs/: historical_pricing.md
examples/: historical_pricing_examples.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: ArenaDesigner.css  ArenaDesigner.jsx  ArenaDesignerIntegration.jsx  ArenaDetailView.css  ArenaDetailView.jsx  ArenaHomePage.css  ArenaHomePage.jsx  ArenaViewer.css  ArenaViewer.jsx  BBArenaCollector.css  BBArenaCollector.jsx  BasketballCourt.css  BasketballCourt.jsx  GameAttendanceSidebar.css  GameAttendanceSidebar.jsx  GameDataSidebar.css  GameDataSidebar.jsx  LoadingSpinner.css  LoadingSpinner.jsx
frontend/src/components/ArenaDetailView/: ArenaDetailView.css
frontend/src/components/ArenaDetailView/styles/: game-data.css  header.css  layout.css  popover.css  responsive.css  snapshot.css
frontend/src/components/court/: BasketAndBackboard.jsx  CenterCourt.jsx  CourtOutline.jsx  CourtsideSeating.jsx  FreeThrowLanes.jsx  LowerTierSeating.jsx  LuxuryBoxes.jsx  ThreePointLine.jsx
frontend/src/services/: arenaService.js
frontend/src/types/: GameRecord.js
scripts/: collect_historical_pricing.py  data_collection.py  db_to_pandas.py  dev-check.sh  populate_league_hierarchy.py  show_collected_data.py  start-backend.sh  test_collection.py  test_country_sorting.py  test_league_discovery.py  test_pricing_collector.py  test_usa_level1_collection.py
src/bb_arena_optimizer/: __init__.py
src/bb_arena_optimizer/analysis/: __init__.py  stored_data.py
src/bb_arena_optimizer/api/: __init__.py  client.py  server.py
src/bb_arena_optimizer/api/routers/: arenas.py  buzzerbeater.py  collecting.py  games.py  prices.py  team_league_history.py  teams.py
src/bb_arena_optimizer/collecting/: __init__.py  arena_row.py  arena_table_parser.py  improved_pricing_service.py  price_period.py  pricing_service.py  task_based_collector.py  team_arena_collector.py
src/bb_arena_optimizer/examples/: basic_analysis.py  collect_historical_seasons.py  collect_season68_enhanced.py  complete_workflow.py  data_collection_demo.py
src/bb_arena_optimizer/models/: __init__.py  arena.py  game.py
src/bb_arena_optimizer/storage/: __init__.py  collector.py  database.py  models.py
src/bb_arena_optimizer/storage/utils/: __init__.py  arena_utils.py  game_utils.py  season_utils.py  team_utils.py
src/bb_arena_optimizer/utils/: __init__.py  data_helpers.py  logging_config.py
tests/: README.md  __init__.py  test_arena.py  test_arena_collector.py  test_database_integration.py  test_end_to_end.py  test_fix_verification.py  test_game.py  test_pricing_pipeline_integration.py  test_pricing_service.py
tests/collecting/: __init__.py  fetch_price_update_team.py  test_arena_datetime_utils.py  test_arena_row_parsing.py  test_arena_table_isolation.py  test_price_period_demo.py
tests/collecting/fixtures/: team_142773_with_price_updates_table_only.html  team_27795_no_price_update.html
