[project]
name = "bb-arena-optimizer"
version = "0.1.0"
description = "BuzzerBeater Arena Ticket Pricing Optimizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
analysis = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "types"},
    {include-group = "analysis"},
]
lint = [
    "ruff>=0.12.4",
]
test = [
    "pytest>=8.4.1",
]
types = [
    "ty>=0.0.1a15",
    "types-pytz>=2025.2.0.20250516",
    "types-requests>=2.32.4.20250611",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "E4",     # Import errors
    "E7",     # Statement errors  
    "E9",     # Runtime errors
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "I",      # isort
    "UP",     # pyupgrade
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["bb_arena_optimizer"]

[tool.ty.rules]
unused-ignore-comment = "warn"